--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -58,7 +58,7 @@ Some algorithms can also run distributed on a cluster.
 Numerous analysis options are available.
 
 \imitator{} is a command-line only tool, but that can output results in graphical form.
-Furthermore, a graphical user interface is available in the \CosyVerif{} platform~\cite{AHHKLLP13}.
+% Furthermore, a graphical user interface is available in the \CosyVerif{} platform~\cite{AHHKLLP13}.
 
 \imitator{} was able to verify numerous case studies from the literature and from the industry, such as communication protocols, hardware asynchronous circuits, schedulability problems and various other systems such as coffee machines (probably the most critical systems from a researcher point of view).
 Numerous benchmarks are available at \imitator{} Web page~\cite{imitator}.
