--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2513,6 +2513,10 @@ Camille~Coti, Sami~Evangelista and Nguy\~{ê}n~Hoàng~Gia worked on the distribu
 Nguy\~{ê}n~Hoàng~Gia worked on the non-Zeno synthesis algorithms.
 %
 Stéphane Rosse improved a script for comparing results and speeds of various versions of \imitator{}.
+%
+Vincent~Bloemen implemented the optimal-time reachability synthesis.
+%
+Jaime~Arias simplified a lot the source code management and implemented new features.
 
 We acknowledge the help of the PPL~\cite{bhz08} developers for their help with solving several issues over the years, and more generally for making this very useful library available.
 
