Fix compiling issue in not-a-developer-manual

--- a/doc/IMITATOR-not-developer-manual.tex
+++ b/doc/IMITATOR-not-developer-manual.tex
@@ -136,6 +136,23 @@ This developer manual is available under the Creative Commons CC-BY-SA license.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
+
+\newcommand{\CCIS}{Communications in Computer and Information Science}
+\newcommand{\ENTCS}{Electronic Notes in Theoretical Computer Science}
+\newcommand{\FI}{Fundamenta Informormaticae}
+\newcommand{\FMSD}{Formal Methods in System Design}
+\newcommand{\IJFCS}{International Journal of Foundations of Computer Science}
+\newcommand{\IJSSE}{International Journal of Secure Software Engineering}
+\newcommand{\JLAP}{Journal of Logic and Algebraic Programming}
+\newcommand{\JLC}{Journal of Logic and Computation}
+\newcommand{\LMCS}{Logical Methods in Computer Science}
+\newcommand{\LNCS}{Lecture Notes in Computer Science}
+\newcommand{\RESS}{Reliability Engineering \& System Safety}
+\newcommand{\STTT}{International Journal on Software Tools for Technology Transfer}
+\newcommand{\TCS}{Theoretical Computer Science}
+\newcommand{\ToPNoC}{Transactions on Petri Nets and Other Models of Concurrency}
+\newcommand{\TSE}{IEEE Transactions on Software Engineering}
+
 \bibliographystyle{alpha}
 \addcontentsline{toc}{chapter}{References}
 \bibliography{biblio}
