--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -274,7 +274,7 @@ a discrete variable valuation is a function $\dval \colon \DVar \rightarrow \gra
 
 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
-\subsection{Linear constraints}
+\subsection{Linear constraints}\label{ss:constraints}
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
 
 Let us formalize the set of linear constraints allowed in \imitator{}.
@@ -1073,6 +1073,12 @@ We review some points in the following.
 \paragraph{Parameters}
 A fundamental difference \imitator{} and \uppaal{} is that \uppaal{} does not support timing parameters.
 Parameters are therefore translated to constants, the value of which can be manually changed by the user.
+
+\paragraph{Form of the constraints}
+\imitator{} allows a much wider form of constraints than \uppaal{}.
+In particular, \imitator{} allows any conjunction of linear constraints (see \cref{ss:constraints}) while \uppaal{} mainly allows clocks to be compared to integers.
+In addition, \uppaal{} only allows invariants of the form $\clock \leq c$ or $\clock < c$, which is not a restriction in \imitator{}.
+No check are made when translating, and therefore \uppaal{} may not accept models translated from \imitator{} input models using these features.
 
 \paragraph{Discrete variables}
 Discrete variables in \imitator{} are rational-valued with an exact value.
