Reintroduce NZCUB algorithms with the recent modifications on the state space and the conditional updates

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -740,10 +740,12 @@ Two options are possible in \imitator{}:
 	In contrast to most other algorithms of \imitator{}, these two algorithms work on a slightly restricted syntax:
 	\begin{itemize}
 		\item in a guard or invariant, each clock must be used at most once;
+		\item the conditional updates (new since version 2.12) are not supported;
 		\item the use of discrete variables was not tested (and may not be always working);
 		\item the use of coefficients on parameters (different from 0 or~1) was not tested;
 		\item the use of stopwatches was not tested (but should be no problem).
 	\end{itemize}
+	Overall, this part of \imitator{} has been less tested and is probably less stable than the rest of the tool.
 \end{warning}
 
 As usual, \imitator{} can also
