Fix documentation for -counterex option

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1328,7 +1328,7 @@ Print the list of contributors and exits.
 %------------------------------------------------------------
 \paragraph{\styleOption{-counterexample}}
 %------------------------------------------------------------
-For algorithms \EFsynth{} and \PRP{}, stops the analysis as soon as one target state is found.
+For algorithm \EFsynth{}, stops the analysis as soon as one target state is found, and returns the (possibly approximated) result.
 
 
 %------------------------------------------------------------
