--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -521,14 +521,18 @@
 
 
 @article{JLR15,
-	author = {Jovanovi\'c, Aleksandra and Lime, Didier and  Roux, Olivier H.},
-	title = {Integer Parameter Synthesis for Timed Automata},
-	journal = {\TSE{}},
-	publisher = {IEEE Computer Society Press},
-	year = 2015,
-	volume= {41},
-	number= {5},
-	pages = {445--461},
+	author    = {Aleksandra Jovanovi{\'c} and
+				Didier Lime and
+				Roux, Olivier H.},
+	title     = {Integer Parameter Synthesis for Real-Time Systems},
+	journal   = {\TSE{}},
+	volume    = {41},
+	number    = {5},
+	pages     = {445--461},
+	year      = {2015},
+	doi       = {10.1109/TSE.2014.2357445},
+	biburl    = {https://dblp.org/rec/bib/journals/tse/JovanovicLR15},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
 }
 
 
