User manual: change font to display some math operators ; add mention to hytech in old syntax description

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -298,7 +298,6 @@ $
 	$\lterm$ is a linear term over~$\Var$,
 	and
 	${\bowtie} \in \{ <, \leq, =, \geq, > \}$.
-		% TODO: problem < > don't print
 
 A~\emph{constraint} over $\Var$ is a conjunction of atomic constraints.
 We denote by $\LTerm(\Var)$ the set of linear terms over~$\Var$, and by $\LConstraint(\Var)$ the set of constraints over~$\Var$.
@@ -1962,7 +1961,7 @@ We define each of those two components below.
 
 \smallskip
 
-(for backward compatibility with versions $< 2.10.1$, replacing ``\styleIMI{invariant}'' with ``\styleIMI{while}'' is still allowed, although it is deprecated)
+(for backward compatibility with versions $< 2.10.1$ and \hytech{}, replacing ``\styleIMI{invariant}'' with ``\styleIMI{while}'' is still allowed, although it is deprecated)
 
 \smallskip
 
@@ -2044,7 +2043,7 @@ We define each of those two components below.
 
 \smallskip
 
-(for backward compatibility with versions $< 2.10.1$, replacing ``\styleIMI{<name>} \styleIMI{:=}'' with ``\styleIMI{<name>} \styleIMI{'} \styleIMI{=}'' is still allowed, although it is deprecated)
+(for backward compatibility with versions $< 2.10.1$ and \hytech{}, replacing ``\styleIMI{<name>} \styleIMI{:=}'' with ``\styleIMI{<name>} \styleIMI{'} \styleIMI{=}'' is still allowed, although it is deprecated)
 
 \smallskip
 
