--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -10,7 +10,8 @@
 \usepackage[english]{babel} % francais,
 
 \usepackage{fourier}
-\usepackage{eulervm}
+% \usepackage{eulervm}
+% NOTE: both fourier + eulervm make '<' and '>' not displaid!
 
 \usepackage{pdflscape}
 
