--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -63,16 +63,19 @@
 @inproceedings{ABPV19,
 	author = {Andr{\'e}, {\'E}tienne and Bloemen, Vincent and Petrucci, Laure and van de Pol, Jaco},
 	title = {Minimal-Time Synthesis for Parametric Timed Automata},
-	longbooktitle = {Proceedings of the 25th International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2019)},
-	booktitle = {{TACAS}},
-	editor = {Vojnar, Tomas and Zhang, Lijun},
+	longbooktitle = {Proceedings of the 25th International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2019), Part {II}},
+	booktitle = {{TACAS}, Part {II}},
+	doi = {10.1007/978-3-030-17465-1_12},
+	editor = {Vojnar, Tomáš and Zhang, Lijun},
 	location = {Prague, Czech Repubic},
 	confdates = {8-11 April  2019},
+	pages = {211--228},
 	publisher = {Springer},
 	series    = {\LNCS{}},
+	volume = {11428},
 	year = {2019},
-	note = {To appear},
 }
+
 
 	
 
