--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2613,6 +2613,7 @@ Romain~Soulat implemented in part the merging technique~\cite{AFS13atva}, and br
 Giuseppe~Lipari and Sun~Youcheng provided examples from the real-time systems community, and collaborated on several algorithms.
 Camille~Coti, Sami~Evangelista and Nguy\~{ê}n~Hoàng~Gia worked on the distributed version of \imitator{}.
 Nguy\~{ê}n~Hoàng~Gia worked on the non-Zeno synthesis algorithms.
+Laure~Petrucci implemented an NDFS algorithm.
 %
 Stéphane Rosse improved a script for comparing results and speeds of various versions of \imitator{}.
 %
