--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -300,6 +300,25 @@
 	year = {2016},
 }
 
+@inproceedings{ALR18FORMATS,
+	author = {Andr{\'e}, {\'E}tienne and Lime, Didier and Ramparison, Mathias},
+	title = {{TCTL} model checking lower/upper-bound parametric timed automata without invariants},
+	longbooktitle =		{Proceedings of the 16th International Conference on Formal Modeling and Analysis of Timed Systems ({FORMATS} 2018)},
+	booktitle = {{FORMATS}},
+	doi = {10.1007/978-3-030-00151-3_3},
+	confdates = {September 4-6, 2018},
+	editor = {Jansen, David N. and Prabhakar, Pavithra},
+	location = {Beijing, China},
+	pages = {1--17},
+	publisher = {Springer},
+	series    = {\LNCS{}},
+	volume = {11022},
+	year = {2018},
+	lipn-category = {intc},
+	keywords = {intc},
+}
+
+
 @inproceedings{ALR18PresetTA,
 	author = {Andr{\'e}, {\'E}tienne and Lime, Didier and Ramparison, Mathias},
 	title = {Timed automata with parametric updates},
