Convert the manuals to biblatex, with nicer references

--- a/doc/IMITATOR-not-developer-manual.tex
+++ b/doc/IMITATOR-not-developer-manual.tex
@@ -31,8 +31,6 @@
 \begin{document}
 % \maketitle
 
-\sloppy
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{title_and_toc.tex}
@@ -60,7 +58,7 @@ It will naturally evolve over time.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Constraints are implemented using the Parma Polyhedra Library (PPL)~\cite{bhz08}.
+Constraints are implemented using the Parma Polyhedra Library (PPL)~\cite{BHZ08}.
 Constraints in PPL use integer-valued indexes for variables.
 
 In \imitator{}, the variables are numbered as follows in the constraint, starting from~0:
@@ -128,36 +126,13 @@ This developer manual is available under the Creative Commons CC-BY-SA license.
 	\includegraphics[width=.2\textwidth]{images/CC-BY-SA_500.png}
 \end{center}
 
-\bigskip
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{graphics-credits.tex}
 
+\input{bibliography.tex}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-
-\newcommand{\CCIS}{Communications in Computer and Information Science}
-\newcommand{\ENTCS}{Electronic Notes in Theoretical Computer Science}
-\newcommand{\FI}{Fundamenta Informormaticae}
-\newcommand{\FMSD}{Formal Methods in System Design}
-\newcommand{\IJFCS}{International Journal of Foundations of Computer Science}
-\newcommand{\IJSSE}{International Journal of Secure Software Engineering}
-\newcommand{\JLAP}{Journal of Logic and Algebraic Programming}
-\newcommand{\JLC}{Journal of Logic and Computation}
-\newcommand{\LMCS}{Logical Methods in Computer Science}
-\newcommand{\LNCS}{Lecture Notes in Computer Science}
-\newcommand{\RESS}{Reliability Engineering \& System Safety}
-\newcommand{\STTT}{International Journal on Software Tools for Technology Transfer}
-\newcommand{\TCS}{Theoretical Computer Science}
-\newcommand{\ToPNoC}{Transactions on Petri Nets and Other Models of Concurrency}
-\newcommand{\TSE}{IEEE Transactions on Software Engineering}
-
-\bibliographystyle{alpha}
-\addcontentsline{toc}{chapter}{References}
-\bibliography{biblio}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
