--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % PACKAGES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 
 \usepackage[english]{babel} % francais,
 
@@ -18,17 +18,16 @@
 \usepackage{amsmath,amssymb,amsthm,url}
 \usepackage{amsfonts}
 
-% \usepackage{caption}
 \usepackage{subcaption}
 % \usepackage{marginnote}
 
 % \usepackage[pdftex]{graphicx,color}
 \usepackage[pdftex,
 		colorlinks=true,
-		pagebackref=true,
+% 		pagebackref=true,
 		citecolor=darkgreen,
 		linkcolor=darkblue,
-		urlcolor=darkpurple,
+		urlcolor=URLCOLOR,
 	]{hyperref}
 
 
@@ -85,9 +84,9 @@
 \usetikzlibrary{arrows,automata,decorations.pathmorphing}
 % Couleurs
 
-\definecolor{darkblue}{rgb}{0, 0, 0.7}
+\definecolor{darkblue}{rgb}{0.0,0.0,0.6}
 \definecolor{darkgreen}{rgb}{0, 0.5, 0}
-\definecolor{darkpurple}{rgb}{0.7, 0, 0.7}
+\definecolor{URLCOLOR}{rgb}{.4, .4, .7}
 
 
 \definecolor{turquoise}{rgb}{0 0.41 0.41}
@@ -239,7 +238,6 @@
 \newcommand{\gdot}{\texttt{dot}}
 \newcommand{\graphviz}{Graphviz}
 \newcommand{\hytech}{{\sc HyTech}}
-% \newcommand{\imitator}{\textsc{Imitator}}
 \newcommand{\imitator}{\textsf{IMITATOR}}
 \newcommand{\imitatorExec}{\code{imitator}}
 \newcommand{\IPTA}{IPTA}
@@ -451,3 +449,33 @@
 	morecomment=[s][\color{gray!50!blue}]{(*}{*)},
 }
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% bibLaTeX
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage[backend=biber,backref=true,style=alphabetic,url=false,doi=true,defernumbers=true,sorting=anyt,maxnames=99]{biblatex} % tlmgr install biblatex etoolbox logreq
+\addbibresource{biblio.bib}
+
+% Reformat DOI
+\renewbibmacro*{doi+eprint+url}{%
+	\iftoggle{bbx:doi}
+		{\color{black!40}\footnotesize\printfield{doi}}
+		{}%
+	\newunit\newblock
+	\iftoggle{bbx:eprint}
+		{\usebibmacro{eprint}}
+		{}%
+	\newunit\newblock
+	\iftoggle{bbx:url}
+% 		{\color{black!40}\footnotesize\printfield{url}}
+		{\usebibmacro{url+urldate}}
+		{}%
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% MISC
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\sloppy
