--- a/doc/title_and_toc.tex
+++ b/doc/title_and_toc.tex
@@ -34,7 +34,7 @@
 \vspace{2cm}
 
 \begin{center}
- 	{\Large \url{www.imitator.fr}}
+ 	{\Large \href{https://www.imitator.fr/}{\nolinkurl{www.imitator.fr}}}
  	
 \end{center}
 \hfill\includegraphics[width=.15\textwidth]{images/CC-BY-SA_500.png}
